--- a/debtsTracker/debtsTracker/Resources/layout/Main.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/Main.axml
@@ -15,7 +15,7 @@
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
         android:src="@drawable/ic_add_white_24dp"
-        fab:fab_colorNormal="@color/primary"
-        fab:fab_colorPressed="@color/primary_pressed"
+        fab:fab_colorNormal="@color/accent"
+        fab:fab_colorPressed="@color/light_gray"
         fab:fab_colorRipple="@color/ripple" />
 </FrameLayout>
