--- a/debtsTracker/debtsTracker/Resources/layout/add_transaction.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/add_transaction.axml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
-        android:background="@color/material_grey_300"
+        android:background="@color/ripple"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/name_container">
@@ -40,7 +40,7 @@
         android:hint="0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/green"
+        android:textColor="@color/accent"
         android:id="@+id/amount"
         android:textAlignment="center"
         android:textSize="36sp"
