--- a/debtsTracker/debtsTracker/Resources/layout/add_transaction.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/add_transaction.axml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
     <RelativeLayout
         android:background="@color/ripple"
         android:layout_width="match_parent"
@@ -66,6 +67,7 @@
         android:layout_below="@id/amount"
         android:gravity="center_horizontal"
         android:singleLine="true"
+        android:textColor="@color/primary_dark"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
@@ -84,5 +86,6 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
+        android:textColor="@color/primary_dark"
         android:focusable="false" />
 </RelativeLayout>
