status bar and styling

--- a/debtsTracker/debtsTracker/Resources/layout/debt_item.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/debt_item.axml
@@ -19,7 +19,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/name"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primary_dark"
                 android:textAlignment="viewStart"
                 android:textSize="18sp"
                 android:layout_marginTop="8dp"
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/count"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primary_dark"
                 android:textAlignment="viewStart"
                 android:textSize="22sp"
                 android:layout_marginBottom="8dp"
