--- a/debtsTracker/debtsTracker/Resources/layout/Main.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/Main.axml
@@ -10,33 +10,30 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@color/ripple">
-        <android.support.v7.widget.Toolbar
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/app_bar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="56dp">
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:minHeight="?attr/actionBarSize"
+                android:background="?attr/colorAccent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+        </android.support.design.widget.AppBarLayout>
+    <!--<android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:minHeight="?attr/actionBarSize"
             android:background="?attr/colorAccent"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <FrameLayout
-            android:orientation="vertical"
+            android:layout_height="wrap_content" />-->
+        <RelativeLayout
+            android:id="@+id/main_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/main_content">
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-            <com.refractored.fab.FloatingActionButton
-                android:id="@+id/fab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|right"
-                android:layout_margin="16dp"
-                android:src="@drawable/ic_add_white_24dp"
-                app:fab_colorNormal="@color/accent"
-                app:fab_colorPressed="@color/light_gray"
-                app:fab_colorRipple="@color/ripple" />
-        </FrameLayout>
+            android:fitsSystemWindows="true" />
     </LinearLayout>
     <android.support.design.widget.NavigationView
         android:layout_width="wrap_content"
