--- a/debtsTracker/debtsTracker/Resources/layout/history.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/history.axml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
@@ -36,9 +37,23 @@
             android:layout_marginRight="16dp"
             android:layout_marginBottom="5dp" />
     </RelativeLayout>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/name_container" />
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/name_container" />
+        <com.refractored.fab.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_add_white_24dp"
+            app:fab_colorNormal="@color/accent"
+            app:fab_colorPressed="@color/light_gray"
+            app:fab_colorRipple="@color/ripple" />
+    </FrameLayout>
 </RelativeLayout>
