--- a/debtsTracker/debtsTracker/Resources/layout/Main.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/Main.axml
@@ -20,15 +20,8 @@
                 android:background="?attr/colorAccent"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:theme="@style/MyTheme" />
+                android:theme="@style/ToolBarStyle" />
         </android.support.design.widget.AppBarLayout>
-    <!--<android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:minHeight="?attr/actionBarSize"
-            android:background="?attr/colorAccent"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />-->
         <RelativeLayout
             android:id="@+id/main_content"
             android:layout_width="match_parent"
