--- a/debtsTracker/debtsTracker/Resources/layout/start_layout.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/start_layout.axml
@@ -1,9 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <android.support.v7.widget.RecyclerView
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/ripple"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:tabIndicatorHeight="4dp"
+        app:tabTextColor="@color/light_gray"
+        app:tabSelectedTextColor="@color/accent"
+        app:tabIndicatorColor="@color/accent"
+        app:tabMode="fixed"
+        app:tabGravity="fill" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <android.support.v4.view.ViewPager xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        <com.refractored.fab.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_add_white_24dp"
+            app:fab_colorNormal="@color/accent"
+            app:fab_colorPressed="@color/light_gray"
+            app:fab_colorRipple="@color/ripple" />
+    </FrameLayout>
+<!-- <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -16,5 +47,5 @@
         android:src="@drawable/ic_add_white_24dp"
         app:fab_colorNormal="@color/accent"
         app:fab_colorPressed="@color/light_gray"
-        app:fab_colorRipple="@color/ripple" />
-</FrameLayout>
+        app:fab_colorRipple="@color/ripple" />-->
+</LinearLayout>
