--- a/debtsTracker/debtsTracker/Resources/menu/nav_menu.axml
+++ b/debtsTracker/debtsTracker/Resources/menu/nav_menu.axml
@@ -2,30 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
   <group android:checkableBehavior="single">
     <item
-      android:id="@+id/nav_home"
+      android:id="@+id/nav_export"
       android:icon="@drawable/ic_add_black_24dp"
-      android:title="Home" />
+      android:title="@string/export" />
     <item
-      android:id="@+id/nav_messages"
+      android:id="@+id/nav_import"
       android:icon="@drawable/ic_add_black_24dp"
-      android:title="Messages" />
+      android:title="@string/import_str" />
     <item
-      android:id="@+id/nav_friends"
+      android:id="@+id/nav_backup"
       android:icon="@drawable/ic_add_black_24dp"
-      android:title="Friends" />
-    <item
-      android:id="@+id/nav_discussion"
-      android:icon="@drawable/ic_add_black_24dp"
-      android:title="Discussion" />
+      android:title="@string/backup" />
   </group>
-  <item android:title="Sub items">
+  <item android:title="@string/other">
     <menu>
       <item
         android:icon="@drawable/ic_add_black_24dp"
-        android:title="Sub item 1" />
-      <item
-        android:icon="@drawable/ic_add_black_24dp"
-        android:title="Sub item 2" />
+        android:title="@string/no_ads" />
      </menu>
   </item>
 </menu>
