--- a/debtsTracker/debtsTracker/Resources/layout/history.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/history.axml
@@ -3,48 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <RelativeLayout
-        android:background="@color/ripple"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/name_container">
-        <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_centerVertical="true"
-            android:id="@+id/contacts_button"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/ic_account_plus_black_24dp"
-            android:background="@null"
-            android:layout_marginTop="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp" />
-        <EditText
-            android:hint="@string/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/name"
-            android:textSize="22sp"
-            android:background="@null"
-            android:gravity="left"
-            android:layout_toLeftOf="@id/contacts_button"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:singleLine="true"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="5dp" />
-    </RelativeLayout>
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <android.support.v7.widget.RecyclerView
             android:id="@+id/list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/name_container" />
+            android:layout_height="match_parent" />
         <com.refractored.fab.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
