--- a/debtsTracker/debtsTracker/Resources/layout/Main.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/Main.axml
@@ -20,7 +20,17 @@
                 android:background="?attr/colorAccent"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:theme="@style/ToolBarStyle" />
+                android:theme="@style/ToolBarStyle">
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/done"
+                    android:textColor="@android:color/white"
+                    android:layout_gravity="right"
+                    android:background="@null"
+                    android:id="@+id/done_button"
+                    android:visibility="gone" />
+            </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
         <RelativeLayout
             android:id="@+id/main_content"
