--- a/debtsTracker/debtsTracker/Resources/layout/debt_item.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/debt_item.axml
@@ -34,6 +34,15 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="16dp"
                 android:layout_alignParentBottom="true" />
+            <ImageButton
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/plus_button"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="16dp"
+                android:src="@drawable/ic_add_black_24dp"
+                android:background="@null" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
