--- a/debtsTracker/debtsTracker/Resources/layout/debt_item.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/debt_item.axml
@@ -43,6 +43,14 @@
                 android:layout_marginRight="16dp"
                 android:src="@drawable/ic_add_black_24dp"
                 android:background="@null" />
+            <ImageButton
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_centerVertical="true"
+                android:id="@+id/minus_button"
+                android:layout_toLeftOf="@id/plus_button"
+                android:src="@drawable/ic_remove_black_24dp"
+                android:background="@null" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
