--- a/debtsTracker/debtsTracker/Resources/layout/history.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/history.axml
@@ -2,23 +2,37 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <FrameLayout
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-        <com.refractored.fab.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
-            android:layout_margin="16dp"
-            android:src="@drawable/ic_add_white_24dp"
-            app:fab_colorNormal="@color/accent"
-            app:fab_colorPressed="@color/light_gray"
-            app:fab_colorRipple="@color/ripple" />
-    </FrameLayout>
+        android:layout_height="match_parent"
+        android:layout_above="@+id/lin_result" />
+    <LinearLayout
+        android:id="@+id/lin_result"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:padding="5dp">
+        <Button
+            android:background="@drawable/shape"
+            android:id="@+id/minus_button"
+            android:text="@string/return_transaction"
+            android:textColor="@color/ripple"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="44dp"
+            android:layout_marginRight="2dp" />
+        <Button
+            android:background="@drawable/shape"
+            android:text="@string/add_transaction"
+            android:textColor="@color/ripple"
+            android:id="@+id/plus_button"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="44dp"
+            android:layout_marginRight="2dp" />
+    </LinearLayout>
 </RelativeLayout>
