--- a/debtsTracker/debtsTracker/Resources/layout/history.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/history.axml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/primary_dark"
         android:textSize="25dp"
-        android:padding="10dp" />
+        android:padding="16dp" />
     <LinearLayout
         android:id="@+id/buttons"
         android:layout_width="match_parent"
@@ -42,6 +42,6 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="44dp"
-            android:layout_marginRight="2dp" />
+            android:layout_marginLeft="2dp" />
     </LinearLayout>
 </RelativeLayout>
