--- a/debtsTracker/debtsTracker/Resources/layout/history.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/history.axml
@@ -17,7 +17,10 @@
         android:layout_height="wrap_content"
         android:textColor="@color/primary_dark"
         android:textSize="25dp"
-        android:padding="16dp" />
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
+        android:paddingTop="7dp"
+        android:paddingBottom="7dp" />
     <LinearLayout
         android:id="@+id/buttons"
         android:layout_width="match_parent"
