--- a/debtsTracker/debtsTracker/Resources/layout/Main.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/Main.axml
@@ -21,15 +21,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:theme="@style/ToolBarStyle">
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/done"
-                    android:textColor="@android:color/white"
+                <FrameLayout
                     android:layout_gravity="right"
-                    android:background="@null"
-                    android:id="@+id/done_button"
-                    android:visibility="gone" />
+                    android:layout_width="40dp"
+                    android:layout_height="match_parent">
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_done_white_24dp"
+                        android:textColor="@android:color/white"
+                        android:layout_gravity="center_vertical"
+                        android:id="@+id/done_button"
+                        android:visibility="gone" />
+                </FrameLayout>
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
         <RelativeLayout
