--- a/debtsTracker/debtsTracker/Resources/layout/add_transaction.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/add_transaction.axml
@@ -4,7 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/form"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
     <android.support.design.widget.TabLayout
         android:id="@+id/tabs"
         android:layout_width="match_parent"
@@ -21,66 +24,75 @@
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="0dp" />
-    <EditText
-        android:hint="@string/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/name"
-        android:capitalize="words"
-        android:textSize="22sp"
-        android:background="@null"
-        android:singleLine="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="5dp" />
-    <EditText
-        android:hint="0"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/accent"
-        android:id="@+id/amount"
-        android:textAlignment="center"
-        android:textSize="36sp"
-        android:background="@null"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal"
-        android:singleLine="true"
-        android:inputType="numberDecimal"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="5dp" />
-    <EditText
-        android:hint="@string/comment"
-        android:capitalize="sentences"
+        android:paddingTop="20dp">
+        <EditText
+            android:hint="@string/name"
+            android:textColor="@color/primary_dark"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/name"
+            android:capitalize="words"
+            android:singleLine="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="5dp" />
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_password"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/comment"
-        android:textAlignment="center"
-        android:textSize="16sp"
-        android:background="@null"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal"
-        android:singleLine="true"
-        android:textColor="@color/primary_dark"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="5dp" />
-    <EditText
+        android:layout_height="wrap_content">
+        <EditText
+            android:hint="@string/amount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/accent"
+            android:id="@+id/amount"
+            android:textAlignment="center"
+            android:singleLine="true"
+            android:inputType="numberDecimal"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="5dp" />
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_password"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:id="@+id/date"
-        android:textSize="16sp"
-        android:background="@null"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
-        android:textColor="@color/primary_dark"
-        android:focusable="false" />
+        android:layout_height="wrap_content">
+        <EditText
+            android:hint="@string/comment"
+            android:capitalize="sentences"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/comment"
+            android:singleLine="true"
+            android:textColor="@color/primary_dark"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="5dp" />
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/date"
+            android:text="17 june 2017"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:textColor="@color/primary_dark"
+            android:focusable="false"
+            android:focusableInTouchMode="false" />
+    </android.support.design.widget.TextInputLayout>
 </LinearLayout>
