--- a/debtsTracker/debtsTracker/Resources/layout/add_debt.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/add_debt.axml
@@ -12,13 +12,35 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/ripple"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:tabIndicatorHeight="4dp"
+        app:tabTextColor="@color/light_gray"
         app:tabSelectedTextColor="@color/accent"
         app:tabIndicatorColor="@color/accent"
         app:tabMode="fixed"
         app:tabGravity="fill" />
+    <android.support.v4.view.ViewPager xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp" />
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="20dp">
+        <EditText
+            android:hint="@string/name"
+            android:textColor="@color/primary_dark"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/name"
+            android:capitalize="words"
+            android:singleLine="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="5dp" />
+    </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout_password"
         android:layout_width="match_parent"
@@ -48,6 +70,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/comment"
             android:singleLine="true"
+            android:background="@color/light_gray"
             android:textColor="@color/primary_dark"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
