--- a/debtsTracker/debtsTracker/Resources/layout/add_debt.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/add_debt.axml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/ripple"
     android:orientation="vertical"
     android:id="@+id/form"
     android:focusable="true"
@@ -70,7 +70,6 @@
             android:layout_height="wrap_content"
             android:id="@+id/comment"
             android:singleLine="true"
-            android:background="@color/light_gray"
             android:textColor="@color/primary_dark"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
