--- a/debtsTracker/debtsTracker/Resources/layout/add_debt.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/add_debt.axml
@@ -25,12 +25,12 @@
         android:layout_height="0dp" />
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="3dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="2dp">
+            android:orientation="vertical">
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/input_layout_password"
                 android:layout_width="match_parent"
