--- a/debtsTracker/debtsTracker/Resources/layout/Main.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/Main.axml
@@ -75,12 +75,12 @@
             android:fitsSystemWindows="true" />
     </LinearLayout>
     <android.support.design.widget.NavigationView
-        android:background="@color/ripple"
+        app:itemIconTint="@color/accent"
+        app:itemTextColor="@color/primary_dark"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:id="@+id/nav_view"
         app:menu="@menu/nav_menu"
-        app:headerLayout="@layout/drawer_header"
-        app:itemBackground="@color/ripple" />
+        app:headerLayout="@layout/drawer_header" />
 </android.support.v4.widget.DrawerLayout>
