removed “no ads” from menu

--- a/debtsTracker/debtsTracker/Resources/menu/nav_menu.axml
+++ b/debtsTracker/debtsTracker/Resources/menu/nav_menu.axml
@@ -19,6 +19,7 @@
 	</group>
 	<item 
 		android:title="@string/other"
+		android:id="@+id/paid_section"
 		>
 		<menu>
 			<group android:checkableBehavior="none">
